# mbed-os

UNITTESTS/fakes/ble/source/generic/: SecurityManagerImpl.h
UNITTESTS/stubs/: CMakeLists.txt
connectivity/FEATURE_BLE/tests/UNITTESTS/doubles/fakes/ble/: CMakeLists.txt  SecurityManagerImpl_mock.h
connectivity/mbedtls/tests/UNITTESTS/doubles/: CMakeLists.txt
